--- a/home/Tpl/default/Index/footer.html
+++ b/home/Tpl/default/Index/footer.html
@@ -133,7 +133,7 @@
         $("#login_out").click(function(){
 
             var submit = function (v, h, f) {
-                jBox.tip("正在处理...", 'loading');
+             //   jBox.tip("正在处理...", 'loading');
                 if (v == 'ok'){
                         window.setTimeout(function () {
                         $.ajax({
