--- a/home/Tpl/default/Member/production_tracking.html
+++ b/home/Tpl/default/Member/production_tracking.html
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
                     <empty name="list">
-						无内容
+						<div style="padding:10px 15px">无内容</div>
 					<else/>
 						<div id="dd-scxxgz">
 	                    	<ul>
