--- a/home/Tpl/default/Member/production_tracking_details.html
+++ b/home/Tpl/default/Member/production_tracking_details.html
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
                     <empty name="data">
-						无内容
+						<div style="padding:10px 15px">无内容</div>
 					<else/>
 						<div style="text-indent:20px">
                             <notempty name="data.production_tracking">
