--- a/home/Tpl/default/Vote/schedule.html
+++ b/home/Tpl/default/Vote/schedule.html
@@ -36,7 +36,7 @@ $(function(){
     	<div id="xm-wxts">
 			<strong>温馨提示：</strong>
 			<p>尊敬的用户，感谢您对要买家具网的支持，您预定的产品将于<{$data.expiration_date|date="m月d日",###}>24点截止预订，订金<span><{$data.subscription}></span>元，成功预订后将得到该产品的九折优惠券（不能与满减劵同时使用，物流费用不属于折扣范围），届时若预订人数未达到设定数量，该产品设计将不投入生产，订金将在三个工作日内退还至您的付款账户；若该设计预订人数达到要求，请您在七日内支付尾款，以保证您能按时收到您的产品。</p>
-			<p>若产品预订人数提前达到设定人数，您可以提前支付尾款，产品到货时间是支付尾款后<span>5</span>日内，请根据您的实际情况选择是否预订该产品，以免给您带来不便，成功预订产品后，在支付尾款前您都可以取消订单，订金将在取消订单后五个工作日内退还至您的付款账户。</p>
+			<p>若产品预订人数提前达到设定人数，您可以提前支付尾款，产品到货时间是支付尾款后<span><{$Think.config.conf6|default="5"}></span>日内，请根据您的实际情况选择是否预订该产品，以免给您带来不便，成功预订产品后，在支付尾款前您都可以取消订单，订金将在取消订单后五个工作日内退还至您的付款账户。</p>
         </div>
    	<div id="xm-ddcc1">
         	<div id="xm-ddcc2">
