--- a/home/Tpl/default/Index/qc_back.html
+++ b/home/Tpl/default/Index/qc_back.html
@@ -1,32 +1,20 @@
 <layout name='layout'/>
 <div class="xm-xq">
-    	<div class="xm-weizhi">首页 >> <span style="color:#666;">登陆注册</span></div>
+    	<div class="xm-weizhi">首页 >> <span style="color:#666;">QQ登录绑定</span></div>
 
         <div id="xm-denglu">
         	<ul>
            	  <li id="xm-dl-left">
-                <form action="javascript:;" name="login_check" id="login_check">
-                	<div id="xm-dl-left1">用户登录</div>
-                    <div id="xm-dl-left2">账号登录</div>
-                	<div class="xm-dl-left3">账&nbsp;&nbsp;号：<input type="text" name="login_name" /></div>
-                    <div class="xm-dl-left3">密&nbsp;&nbsp;码：<input type="password" name="password" /></div>
-                    <div id="xm-dl-left4">
-                    	<ul>
-                        	<li><input type="checkbox" name="remember_me" /></li>
-                            <li id="xm-jizhu">记住登录账号</li>
-                        </ul>
-                    </div>
-                	<div id="xm-dl-left5">
+                <form action="javascript:;" name="qq_bind" id="qq_bind">
+                	<div id="xm-dl-left1">QQ登录绑定</div>
+                    <div id="xm-dl-left2" style="padding-left: 35px;">绑定已有账户</div>
+                	<div class="xm-dl-left3">ＱＱ帐户：<img style="margin-right:5px" class="qq_img" height="30" width="30" src="" /><span class="qq_name" style="font-weight:bold;font-size:17px"></span><input type="hidden" name="qq_name" readonly="readonly" style="border:none" value="" /></div>
+                	<div class="xm-dl-left3">要买账号：<input style="width:195px" type="text" name="login_name" /></div>
+                    <div class="xm-dl-left3">密　　码：<input style="width:195px" type="password" name="password" /></div>
+                	<div id="xm-dl-left5" style="margin-left: 145px">
                     	<ul>
                         	<li><input type="image" src="../Public/image/12.jpg" width="102" height="37" /></li>
                             <li id="xm-jz"><a href="__APP__/Index/forgot_password">忘记密码?</a></li>
-                        </ul>
-                    </div>
-                    <div id="xm-dl-left7">&nbsp;</div>
-                    <div id="xm-zh">使用合作网站账号登录要买家具：</div>
-                    <div id="xm-zuo">
-                    	<ul>
-                            <li id="xm-qq"><a href="javascript:;" class="qq-weibo-login">腾讯QQ</a></li>
                         </ul>
                     </div>
                 </form>
@@ -81,43 +69,97 @@
             </ul>
         </div>
     </div>
-   <script>
-   $(function(){
-                //AJAX登录验证
-    $("[name=login_check]").live('submit',function(){
-        $("[name=login_check]").find("[type=submit]").attr('disabled','disabled');
+<script type="text/javascript">
+    $(function(){
+    	var paras = {};
+    	QC.api("get_user_info", paras)
+		//指定接口访问成功的接收函数，s为成功返回Response对象
+		.success(function(s){
+			//成功回调，通过s.data获取OpenAPI的返回数据
+			$("[name=qq_name]").val(s.data.nickname);
+			$(".qq_name").text(s.data.nickname);
+			$(".qq_img").attr('src',s.data.figureurl_2);
+			console.log('获取用户信息成功！');
+			console.log(s);
+			check_bind_qq(s.data.nickname);
+		})
+		//指定接口访问失败的接收函数，f为失败返回Response对象
+		.error(function(f){
+			//失败回调
+			console.log('获取用户信息失败！');
+			console.log(s);
+			window.location=define_app_url;
+		})
+		//指定接口完成请求后的接收函数，c为完成请求返回Response对象
+		.complete(function(c){
+			//完成请求回调
+			console.log('获取用户信息完成！');
+			console.log(c);
+		});
+
+		function check_bind_qq(nickname){
+            $.ajax({
+                url: define_app_url+'/Index/check_bind_qq',
+                data:{nickname:nickname},
+                type:'POST',
+                success: function(data){
+                    var msg = JSON.parse(data);
+                    if(msg.status==1){
+                        console.log(msg);
+                     //   setTimeout(function(){window.location=define_app_url+'/Member/qq_connect.html'},500);
+                    }else{
+                        console.log(msg);
+                        window.location=define_app_url+'/Member';
+                        //   jBox.tip(msg.info, 'error',{ timeout: 1000})
+                    }
+                }
+            });
+        }
+
+     $("[name=qq_bind]").live('submit',function(){
+        $("[name=qq_bind]").find("[type=submit]").attr('disabled','disabled');
         var data = $(this).serializeArray();
-        var login_name = $("#login_check [name=login_name]");
-        var password = $("#login_check [name=password]");
-        if(login_name.val().length<6){
-            jBox.tip("帐号有误", 'error',{ timeout: 1000,closed: function () { $("[name=login_check]").find("[type=submit]").removeAttr('disabled'); }});
+        var qq_name = $("#qq_bind [name=qq_name]");
+        var login_name = $("#qq_bind [name=login_name]");
+        var password = $("#qq_bind [name=password]");
+        if(qq_name.val()==''){
+        	jBox.tip("异常操作", 'error',{ timeout: 1000,closed: function () { $("[name=qq_bind]").find("[type=submit]").removeAttr('disabled'); }});
+            return false;
+        }else if(login_name.val().length<6){
+            jBox.tip("帐号有误,请重新输入", 'error',{ timeout: 1000,closed: function () { $("[name=qq_bind]").find("[type=submit]").removeAttr('disabled'); }});
             return false;
         }else if(password.val().length<6 || password.val().length>12){
-            jBox.tip("密码不能小于6位，大于12位", 'error',{ timeout: 1000,closed: function () { $("[name=login_check]").find("[type=submit]").removeAttr('disabled'); }});
+            jBox.tip("密码不能小于6位，大于12位", 'error',{ timeout: 1000,closed: function () { $("[name=qq_bind]").find("[type=submit]").removeAttr('disabled'); }});
             return false;
         }
         else{
                 jBox.tip("处理中...", 'loading');
                 window.setTimeout(function (){
-                    $("[name=login_check]").find("[type=submit]").removeAttr('disabled');
+                    $("[name=qq_bind]").find("[type=submit]").removeAttr('disabled');
                     $.ajax({
-                        url: define_app_url+'/Member/ajax_login_check',
-                        data: data,
-                        type:'POST',
-                        success: function(data){
-                            var msg = JSON.parse(data);
-                            if(msg.status==1){
-                                jBox.tip(msg.info, 'success',{ timeout: 1000,closed: function () { window.location=msg.data }});
-                            }else{
-                                jBox.tip(msg.info, 'error',{ timeout: 1000,closed: function () {password.val('');verify.val('');$("[name=login_check]").find("[type=submit]").removeAttr('disabled');$("#click_captcha").trigger('click'); }});
-                            }
-                        }
-                    });
+		                url: define_app_url+'/Index/ajax_bind_qq',
+		                data:data,
+		                type:'POST',
+		                success: function(data){
+		                    var msg = JSON.parse(data);
+		                    if(msg.status==1){
+		                        console.log(msg);
+		                    	jBox.tip(msg.info, 'success',{ timeout: 1000,closed: function () { 
+		                    		window.location=define_app_url+'/Member';
+		                    	}});
+		                    }else{
+		                    	jBox.tip(msg.info, 'error',{ timeout: 1500,closed: function () { 
+		                    		
+		                    	}});
+		                       console.log(msg);
+		                    }
+		                }
+		            });
                 },500);
             }
-    });
+    	});
 
-        //AJAX注册验证
+     //AJAX注册验证
     $("[name=signup_check]").live('submit',function(){
         $("[name=signup_check]").find("[type=submit]").attr('disabled','disabled');
         var data = $(this).serializeArray();
@@ -174,5 +216,5 @@
         }
     });
 
-   });
-   </script>
+    })
+</script>
