--- a/admin/Tpl/default/System/configuration.html
+++ b/admin/Tpl/default/System/configuration.html
@@ -75,6 +75,11 @@
                 <span class="tips"></span>
             </li>
 
+            <li class="systemt-set-li"><strong class="system-set-title">物流信息：</strong>
+                <textarea name="conf8"><{$Think.config.conf8}></textarea>
+                <span class="tips"></span>
+            </li>
+
             <li class="systemt-set-li" style="vertical-align: top;">到货时间是支付尾款后几日
                 <input type="text" name="conf6" style="width:100px" value="<{$Think.config.conf6|default="5"}>" />
                 　　
