--- a/home/Tpl/default/Index/footer.html
+++ b/home/Tpl/default/Index/footer.html
@@ -40,6 +40,7 @@
             <li class="foot1"><a href="__APP__/About">关于我们</a></li>
             <li class="foot1"><a href="__APP__/About/index/id/95">联系我们 </a></li>
             <li class="foot1"><a href="__APP__/SupportCenter">帮助中心</a></li>
+            <li class="foot1"><a href="http://www.kuaidi100.com/" target="_blank">快递查询</a></li>
             <li class="foot2"><{$Think.config.site_name}> <{$Think.config.site_copyright}> <{$Think.config.site_filing}></li>
         </ul>
     </div>
