--- a/home/Tpl/default/Vote/details.html
+++ b/home/Tpl/default/Vote/details.html
@@ -152,7 +152,7 @@
                 </ul>
             </div>
             <div class="m_left80">
-                <strong>此价格为配送至当地提货点的价格，然后下面再给出一个上门安装的另加费用</strong>
+                <strong><{$Think.config.conf8}></strong>
             </div>
         </div>
     </div>
